--- a/chi2012.tex
+++ b/chi2012.tex
@@ -336,9 +336,9 @@ We first describe our methodology, starting with the three hypotheses we set out
 \end{itemize}
 
 \subsubsection{Study and task design}
-To test these hypotheses, we designed a within-subjects lab-based A-B study in which participants were asked to perform two predefined tasks in separate timed trials.  The participants asked to use either our DP (``condition A'') or a baseline interface (``condition B'') to complete a task, and we used two possible dataset for each type of task.  We used an A and B condition so that we could compare how users performed their tasks using our interface and the standard approach.  We also used two datasets for each of the tasks, so that we evaluate whether the participant's performance of completing a task differed with different datasets.  Each participant was asked to use DP for one of the trials and the baseline interface for the other; conditions were fully counterbalanced among participants to eliminate inadvertent ordering and task bias.  
+To test these hypotheses, we designed a within-subjects lab-based A-B study in which participants were asked to perform two predefined tasks in separate timed trials, once with the DP interface (``condition A'') and once with a baseline interface (``condition B'' which we describe below).  We used upon the within-subjects A-B format in order to make both quantiative measurements about an individual's performance with DP (relative to baseline), but also to make qualitative observations of the processes used by each participant as they solved each task.  Each task was paired with one of two datasets, depending on condition, so that we could evaluate whether the participant's performance of completing a task differed with different datasets.  Conditions and interface order were fully counterbalanced among participants to eliminate inadvertent ordering and task bias.  
 
-% why? why were these tasks selected? can we drop the phrase ``multi-dimensional subjective choice task'' and refer back to PS.1 to justify the choice of tasks?
+% why? why were these tasks selected? can we drop in the phrase ``multi-dimensional subjective choice task'' and refer back to PS.1 to justify the choice of tasks?
 We based our two tasks on these scenarios on choosing a university and picking a restaurant for a large social event, because in PS.1 the majority of people stated that they had used multiple websites for these tasks.  We used different two different variables for both tasks, where the restaurant was located (Glasgow and Cambridge) and which subject people choose (sport science and history).  The cities Glasgow and Cambridge were chosen because they are not geographically close to the participants, they are two heavily populated areas that have a choice of restaurants, and they contained detail data about the same restaurants on various review sites.  When deciding on which cities to use, we found that different areas favoured different review websites and places such as Hull had sets of disjoint sets of restaurant reviews.  We selected the top restaurants for on Tripadvisor and Yelp, because they were the top two websites people quoted for comparing reviews when travelling.  We selected the two courses for the university task at random from a list taken form the complete university guide\footnote{}, and selected the top six university for that subject because they provide a realistic shortlist and are comparable in terms of rankings and properties.   We selected a shortlist of six because it is typical for users to narrow down their options to a limited selection before analysing the details of their final choicesex
 
 \subsubsection{Task preparation}
