--- a/chi2012.tex
+++ b/chi2012.tex
@@ -17,6 +17,7 @@
 % Remove this line to eliminate page numbers for the camera ready copy
 %\pagenumbering{arabic}
 
+\hyphenation{Data-Palette}
 
 % Load basic packages
 \usepackage{balance}  % to better equalize the last page
