--- a/chi2012.tex
+++ b/chi2012.tex
@@ -210,7 +210,7 @@ The per-source metrics were as follows:
 \item \emph{Average Depth of record} - Average depth of data record (number of subproperties in self-contained record). (In JSON/XML representations, this is the tree depth; for RDF  representations this is merely the number of embedded entity resource definitions included in the top-level query).
 \end{itemize}
 
-Heterogeneity was measured through \emph{pairwise consistency metrics} we derived from definitions in \cite{george2005understanding} and feature-metrics used in statistical instance alignment algorithms (such as summarised in \cite{bhattacharya2007collective}). Such metrics were chosen because they reflected, the differences among the data feeds at multiple levels - from the simple (labelling) differneces to differences in how data was structured, and modeled. Each such metric listed above is the result of averaging the pairwise score between sources in each category, separately and defined as follows:
+Heterogeneity was measured through \emph{pairwise consistency metrics} we derived from definitions in \cite{george2005understanding} and feature-metrics used in statistical instance alignment algorithms (such as summarised in \cite{bhattacharya2007collective}). Such metrics were chosen because they reflected the differences among data feeds at multiple levels -  the terminological (use of names/labels), structural level, and modelling level. Each such metric listed above is the result of averaging the pairwise score between sources in each category, separately and defined as follows:
 
 \begin{itemize}
 \item \emph{Terminological consistency} - Percent of property names that match
@@ -442,13 +442,13 @@ Participants spent an average of 8.9 minutes performing the tasks overall, with 
 Although across trials, restaurant selection task took on average slightly less time ($M=8.8$min,$SD=1.58$) than the university trials ($M=8.9$min,$SD=1.66$), the aforementioned ANOVA test found task type to not be a significant predictor either.
 
 \subsubsection{Thoroughness: Factors weighed in final choice}
-A second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to tell us precisely why their choice was made, and matched their justifications to properties in the data.  This analysis revealed a significant effect of interface on number of factors weighed ($F(1,19)=3.95, p<0.10$); participants in the DP condition listed an average of 5.5 choices in their decision ($SD=1.7$) versus 4 ($SD=1.73$) in the standard condition.
+A second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to tell us precisely why their choice was made, and matched their justifications to properties in the data.  This analysis revealed a significant effect of interface on number of factors weighed ($F(1,19)=3.95; p<0.10$); participants in the DP condition listed an average of 5.5 choices in their decision ($SD=1.7$) versus 4 ($SD=1.73$) in the standard condition.
 
 \subsubsection{Diversity: Data sources consulted}
-A third metric we used to gauge how well the participant performed their tasks is the number of different data sources the participant consulted during the trial. In this metric, participants used an average of 88\% of data sources provided in the DP case, compared to 80\% in the standard interface, although an ANOVA test blocking on participant demonstrated that interface choice only approached significance in predicting the number of sources consulted ($F(1,19)=0.04  p\approx0.10$).
+A third metric we used to gauge how well the participant performed their tasks is the number of different data sources the participant consulted during the trial. In this metric, participants used an average of 88\% of data sources provided in the DP case, compared to 80\% in the standard interface, although an ANOVA test blocking on participant demonstrated that interface choice only approached significance in predicting the number of sources consulted ($F(1,19)=0.04$ $p\approx0.10$).
 
 \subsubsection{Effort: External cognition}
-Although we did not have an explicit measure of effort for this experiment (such as NASA's TLX \cite{tlx}) the use of paper notes provided an indicator of how much participants had to keep track of during the study.  We found that participants took notes less on average (25\%) with the DP interface than the standard interface (35\%), a difference which approached significance in an ANOVA blocked by participant ($F(1,19)= 8.22$, $p\approx0.10$).
+Although we did not have an explicit measure of effort for this experiment (such as NASA's TLX \cite{tlx}) the use of paper notes provided an indicator of how much participants had to keep track of during the study.  We found that participants took notes less on average (25\%) with the DP interface than the standard interface (35\%), a difference which approached significance in an ANOVA blocked by participant ($F(1,19)= 8.22; p\approx0.10$).
 
 \subsection{Condition A (DP)}
 In the A condition, where participants used DataPalette to complete their tasks they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
