--- a/chi2012.tex
+++ b/chi2012.tex
@@ -210,11 +210,7 @@ The per-source metrics were as follows:
 \item \emph{Average Depth of record} - Average depth of data record (number of subproperties in self-contained record). (In JSON/XML representations, this is the tree depth; for RDF  representations this is merely the number of embedded entity resource definitions included in the top-level query).
 \end{itemize}
 
-<<<<<<< HEAD
-Heterogeneity was measured through \emph{pairwise consistency metrics} we derived from definitions in \cite{george2005understanding} and feature-metrics used in statistical instance alignment algorithms (such as summarised in \cite{bhattacharya2007collective}). Such metrics were chosen because they reflected the differences among data feeds at multiple levels -  the terminological (use of names/labels), structural level, and modelling level. Each such metric listed above is the result of averaging the pairwise score between sources in each category, separately and defined as follows:
-=======
-Heterogeneity was measured through \emph{pairwise consistency metrics} we derived from definitions in \cite{george2005understanding} and feature-metrics used in statistical instance alignment algorithms (such as summarised in \cite{bhattacharya2007collective}). Such metrics were chosen because they reflected, the differences among the data feeds at multiple levels - from the simple (labelling) differneces to differences in how data was structured, and modelled. Each such metric listed above is the result of averaging the pairwise score between sources in each category, separately and defined as follows:
->>>>>>> 3b12f3b0387d995aa0f9a54f3a2dd6258d1ab95f
+Heterogeneity was measured through \emph{pairwise consistency metrics} we derived from definitions in \cite{george2005understanding} and feature-metrics used in statistical instance alignment algorithms (such as summarised in \cite{bhattacharya2007collective}). Such metrics were chosen because they reflected the differences among data feeds at multiple levels -  the terminological (use of names/labels), structural, and modelling levels. Each such metric listed above is the result of averaging the pairwise score between sources in each category, separately and defined as follows:
 
 \begin{itemize}
 \item \emph{Terminological consistency} - Percent of property names that match
