--- a/chi2012.tex
+++ b/chi2012.tex
@@ -221,7 +221,7 @@ Heterogeneity was measured through \emph{pairwise consistency metrics} we derive
 
 \subsubsection{Results}
 % TODO TODO TODO TODO 
-Our findings suggest that 
+Our findings suggest that -- FILL ME IN HERE PLEASE, 
 
 \section{Designing DataPalette : An Interface for Serendipitous Data Mixing}
 \begin{figure*}[htbp]
