--- a/chi2012.tex
+++ b/chi2012.tex
@@ -463,7 +463,13 @@ of which university to choose by averaging different metrics supplied by the dat
 
 Notably, a number of users admittedly introduced their own bias into the choices in both A and B conditions: ``I prefer Indian food, so I will choose the Indian restaurant'', and one participant spent time on Google Maps looking at the routes to each restaurant, and eliminating those that required bus transfers (the protocol did not mention routing/transfers at all).
 
-In the exit survey, the users noted that they would use DataPalette for finding a property to rent/buy, choosing a job and purchasing electronic devices, in the future.  However, one participant said that they would not use it for things like deciding on a restaurant because ``it would cheapen the experience'' by removing the spontaneity, but would use it for making more important decisions.  In order to improve our solutions the participants suggested making the origin of the information clearer, sorting instances, and explanations of ratings and scoring systems (however some of these are not transparent on websites).
+\subsection{Survey Results}
+
+%+ ÊWhat did people think about it? % Ê Ê Ê ÊUsefulness,Ease,Confusion,etc
+
+In the exit survey, the users noted that they would use an interface like DataPalette in the future, for finding a property to rent/buy, choosing a job and purchasing electronic devices.  However, one participant said that they would not use it for things like deciding on a restaurant because ``it would cheapen the experience'' by removing the spontaneity, but would use it for making more important decisions.  In order to improve our solutions the participants suggested making the origin of the information clearer, particularly when combining multiple data sources. The participants also requested the ability to sort instances, as well as explanations of ratings and scoring systems (however some of these are not even transparent on websites). Participants also requested standard features not present in our prototype, such as window management options (specifically, arranging and minimising windows), and the ability to undo operations.
+
+
 
 \section{Discussion}
 
