--- a/chi2012.tex
+++ b/chi2012.tex
@@ -449,12 +449,22 @@ The third metric we used to gauge how well the participant performed their tasks
 \subsubsection{Effort: External cognition}
 Although we did not have an explicit measure of effort for this experiment (such as NASA's TLX \cite{tlx}) the use of paper notes provided an indicator of how much participants had to keep track of during the study.  We found that participants took notes less on average (25\%) with the DP interface than the standard interface (35\%), a difference which approached significance in an ANOVA blocked by participant ($F(1,19)= 8.22; p\approx0.10$).
 
-\subsubsection{Strategies: Successive Elimination vs Tallying}
+\subsection{Strategies: Successive Elimination vs Tallying}
 As described in Discussion later, we noticed several different strategies that people used to evalutate each candidate selection. One common strategy was \emph{successive elimination} - to look at a single dimension at a time, starting with the most important, ruling out candidates that did not meet the required minimum for that value.  However, when there is no clear ``most important'' aspect, this  ``greedy-style'' can result in suboptimal decisions.  By comparison, a different strategy, which we called \emph{tallying the pros and cons}, kept all candidates around, and counted up the advantages and disadvantages of each, potentially weighing each factor by its perceived importance.  This strategy is less vulnerable to getting stuck in local maxima than the former.
 
 To understand whether interface influenced choice of strategy, we measured the number of candidates that the participant considered \emph{at final result}.  This we found was a strong marker for use of each strategy; people using the successive elimination strategy arrived with only 1-2 candidates at decision time, while those that tallied still maintained the entire starting set.  
 
 We found that the use of DP strongly influenced people to keep all candidates around, while participants in the B condition eliminated choices early.  An ANOVA test demonstrated a significant effect between condition and number of candidates maintained ($F(1,19)=5.323; p<0.05$); a post-hoc Tukey HSD test confirmed that  the number of candidates used in the final choice for participants in the A condition ($M=5.85;SD=0.45$) differed significantly from the B condition ($M=4.95; SD=2.26$).
+
+\subsection{Use of Data Integration Features}
+
+To determine whether participants used the data integration features of DP, we looked at use of the \emph{multipath selection} and \emph{Same-As} features of the system.   Pertaining to path selection, all participants readily used the path selection process to select values.   Five participants (25\%) deliberately used multipath selection, defined as selecting more than one active path per group at the same time to display common values across heterogeneous items. (We did not count accidental use of multipath, such as happened a few times when a participant had an already active path and wanted to switch to a separate path accidentally).
+
+Participants used the drag-and-drop \emph{Same-As} capability extensively. Sixteen (80\%) used \emph{Same-As} as least once; among these participants, they used \emph{Same-As} an average of 4.6 times per trial. We counted a single ``use'' as a single drag-and-drop of an individual item, or an entiredrag-and-drop of an entire group into another group.  (We did not differentiate enumerated value consolidation from entity consolidation, as these operations were not discernably different from the interface perspective.)
+
+\subsection{Use of Visualisation Features}
+
+To determine to what extent visualisation tools were used in condition A, 13 (65\%) used charting tools at least once, while 15 (75\%) used the map.  Determining the impact these had on performance, we discovered a significant interaction between the amount charting was used ($F(1,17)=3.26; p<0.10$) and maps were used ($F(1,17)=4.32; p<0.10$)  with time to complete the task.  Examining the coefficients of our ANOVA regression ($Y_0=8.91;\beta_{charts}=0.49;\beta_{maps}=-1.05$) we find that as charting weakly positively influences time taken, while maps negatively influences it.
 
 \subsection{Condition A (DataPalette)}
 In the A condition, where participants used DataPalette to complete their tasks, they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
